chore: Update Astro config for BetterMenu Docs

--- a/src/content/docs/guides/concepts.mdx
+++ b/src/content/docs/guides/concepts.mdx
@@ -1,5 +1,6 @@
 ---
 title: Core Concepts
+description: A guide in my new Starlight docs site.
 ---
 
 
@@ -22,8 +23,8 @@ In addition to satiating hunger, the primary goal of food is to provide nutritio
 
 ## Nutrient
 
-Every ingredient made for consumption contains a variety of nutrients. Nutrients are substances that provide nourishment essential for the maintenance of life and for growth. Nutrients can be divided into two categories: macronutrients and micronutrients. For more details, see [Nutrients](./nutrients.md).
+Every ingredient made for consumption contains a variety of nutrients. Nutrients are substances that provide nourishment essential for the maintenance of life and for growth. Nutrients can be divided into two categories: macronutrients and micronutrients. For more details, see [Nutrients](./nutrients).
 
 ## Recipe
 
-A recipe is a set of instructions for preparing a particular food meant for consumption. See [Recipe](./recipe.mdx) for more details.
+A recipe is a set of instructions for preparing a particular food meant for consumption. See [Recipe](./recipe) for more details.
