--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Welcome to Starlight
+title: Welcome to BetterMenu Docs
 description: Get started building your docs site with Starlight.
 template: splash
 hero:
@@ -8,7 +8,7 @@ hero:
     file: ../../assets/houston.webp
   actions:
     - text: Example Guide
-      link: /guides/example/
+      link: /guides/concepts
       icon: right-arrow
       variant: primary
     - text: Read the Starlight docs
