--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -3,22 +3,22 @@ title: Welcome to BetterMenu Docs
 description: Get started building your docs site with Starlight.
 template: splash
 hero:
-  tagline: Congrats on setting up a new Starlight project!
+  tagline: Get started with bettermenu platform
   image:
-    file: ../../assets/houston.webp
+    file: ../../assets/bm-banner.svg
   actions:
-    - text: Example Guide
+    - text: Read Guide
       link: /guides/concepts
       icon: right-arrow
       variant: primary
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
+    - text: Visit BetterMenu
+      link: https://bettermenu.live
       icon: external
 ---
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
-## Next steps
+{/* ## Next steps
 
 <CardGrid stagger>
 	<Card title="Update content" icon="pencil">
@@ -33,4 +33,4 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 	<Card title="Read the docs" icon="open-book">
 		Learn more in [the Starlight Docs](https://starlight.astro.build/).
 	</Card>
-</CardGrid>
+</CardGrid> */}
