--- a/src/content/docs/guides/nutrients.mdx
+++ b/src/content/docs/guides/nutrients.mdx
@@ -1,3 +1,17 @@
 ---
 title: Nutrients
 ---
+A Nutrient is a substance that provides nourishment essential for the maintenance of life and for growth. Any given food that we consume contains a variety of nutrients. When we consume food, our body breaks down the food into its constituent nutrients. The body then uses these nutrients to perform various functions. The body needs a variety of nutrients to function properly. Nutrients are used by the body to perform various functions such as energy production, growth, repair, and maintenance of cells and tissues.
+
+Nutrients are found in food and are essential for the body to function properly. Nutrients are used by the body to perform various functions such as energy production, growth, repair, and maintenance of cells and tissues.
+When we talk about a Nutrient, it consists of the following properties:
+
+- **Name**: The name of the nutrient.
+- **Measurement Unit**: The unit in which the nutrient is measured. These are typically grams (g), milligrams (mg), micrograms (µg), or international units (IU).
+- **Amount**: The amount of the nutrient in the food. This is typically measured in the measurement unit.
+
+A Nutrient could further be classified into two categories:
+- **Macronutrients**: These are nutrients that provide calories or energy. Macronutrients include carbohydrates, proteins, and fats. These are generally measured in grams (g).
+- **Micronutrients**: These are nutrients that are required in smaller amounts. Micronutrients include vitamins and minerals. These are generally measured in milligrams (mg) or micrograms (µg) or international units (IU).
+
+Depending on the life stage and gender, the daily recommended intake of nutrients may vary. Read [Recommended Daily Intakes](/guides/recommended-daily-intakes) for more information.
