--- a/src/content/docs/guides/nutrient.mdx
+++ b/src/content/docs/guides/nutrient.mdx
@@ -1,5 +1,5 @@
 ---
-title: Nutrients
+title: Nutrient
 ---
 A Nutrient is a substance that provides nourishment essential for the maintenance of life and for growth. Any given food that we consume contains a variety of nutrients. When we consume food, our body breaks down the food into its constituent nutrients. The body then uses these nutrients to perform various functions. The body needs a variety of nutrients to function properly. Nutrients are used by the body to perform various functions such as energy production, growth, repair, and maintenance of cells and tissues.
 
