--- a/src/content/docs/guides/recommended-daily-intakes.mdx
+++ b/src/content/docs/guides/recommended-daily-intakes.mdx
@@ -1,7 +1,7 @@
 ---
 title: Recommended Daily Intakes
 ---
-As we saw in the [Nutrients](guides/nutrients) guide, nutrients are essential for the body to function properly. The amount of each nutrient that the body needs is called the **Recommended Daily Intake (RDI)** or **Recommended Daily Allowance (RDA)**.
+As we saw in the [Nutrients](/guides/nutrient) guide, nutrients are essential for the body to function properly. The amount of each nutrient that the body needs is called the **Recommended Daily Intake (RDI)** or **Recommended Daily Allowance (RDA)**.
 
 These values are set by health authorities and are based on the latest scientific research. The RDI values are different for different nutrients and are based on factors such as age, life-stage, and gender. 
 Differnt countries have different guidelines for RDIs. The following table is an example of various RDIs provided by different health authorities in some of the countries:
