--- a/src/content/docs/guides/recipe.mdx
+++ b/src/content/docs/guides/recipe.mdx
@@ -1,26 +1,93 @@
 ---
 title: Recipe
 ---
+import { Aside } from '@astrojs/starlight/components';
 
-A recipe can be seen as a composition of multiple parts such as
+A Recipe is a combination of ingredients and instructions that are used to prepare a meal for consumption. Some observations about a recipe are:
+
+- A recipe can be as simple as a single ingredient or as complex as a dozen or more ingredients. 
+- A recipe can be as simple as a single step or as complex as a dozen or more steps. 
+- A recipe can be as simple as a single appliance or as complex as a dozen or more appliances. A recipe can be as quick as a few minutes or as long as a few hours.
+
+No matter how simple or complex a recipe is, it always have a combination of some of the following elements:
+
 
 ### Ingredients
 
-A recipe may include as little as two ingredients or as many as a dozen or more. The ingredients can be of different types such as raw, processed, or prepared. See [Ingredient](./concepts.mdx#ingredient) for more details.
+A recipe may include as little as one [food](/guides/food) or as many as a dozen or more. The amount of each food, combined with quantity and measurement unit is known as as **Ingredient**.
+When following an online recipe, or a printed cookbook, these can be located under the heading "Ingredients". Some of the ingredients may be optional, or may have alternatives.
+
+An example of ingredients from a `Vegan Chickpea Salad` recipe could be:
+```
+- 1 can of chickpeas
+- 1/2 cup of diced red onion
+- 1/2 cup of diced cucumber
+- 1/2 cup of diced tomato
+- 1/4 cup of chopped parsley
+- 1/4 cup of chopped mint
+- 1/4 cup of olive oil
+- 1/4 cup of lemon juice
+- Salt and pepper to taste
+```
+
+Some of the key points to note about ingredients are:
+- The ingredient is typically written in one line with the following format: `<quantity> <unit> <food>`. For example, `1 cup chickpeas`.
+- The ingredient always starts with a quantity. The quantity is the amount of the ingredient that is used in the recipe. The quantity is typically a number, such as 1, 2, 1/2, 3 1/2 etc.
+- The quantity is followed by the unit of measurement. The unit of measurement is the unit in which the quantity is measured. Some of the common units of measurement are grams (g), milliliters (ml), cups, tablespoons, teaspoons, etc. The meausrement units used in 
+different parts of the world may vary. For example, in the US, the measurement unit for volume is typically cups, tablespoons, and teaspoons, while in the UK, the measurement unit for volume is typically milliliters (ml) and liters (l). For more details, read [Cookbook:Units of measurement](https://en.wikibooks.org/wiki/Cookbook:Units_of_measurement)
+- The unit of measurement is followed by the food. The food is the ingredient that is used in the recipe. The food can be a single ingredient, such as chickpeas, or a combination of ingredients, such as chickpeas and red onion. The food is typically a noun, such as chickpeas, red onion, cucumber, tomato, etc.
+
+<Aside type="note">
+Need a separate page to explain ingredient, quantity and measurement unit in detail
+</Aside>
 
 ### Instructions
 
-The instructions are the steps that need to be followed to prepare the food. The instructions can be as simple as a single step or as complex as a dozen or more steps. The instructions can include a variety of actions such as chopping, mixing, boiling, frying, etc.
+The *Instruction* is a single step in the process of preparing a recipe. The instructions are typically listed in the order in which they should be performed. When following an online recipe, or a printed cookbook, these can be located under the heading "Instructions".
+An example of instructions from a `Vegan Chickpea Salad` recipe could be:
+```
+1. Drain and rinse the chickpeas.
+2. In a large bowl, combine the chickpeas, red onion, cucumber, tomato, parsley, and mint.
+3. In a small bowl, whisk together the olive oil, lemon juice, salt, and pepper.
+4. Pour the dressing over the salad and toss to combine.
+5. Serve the salad immediately, or refrigerate for later.
+```
 
 ### Appliances
 
-The appliances are the tools that are needed to prepare the food. The appliances can be as simple as a knife or as complex as an oven or a microwave.
+The appliances are the tools that are needed to prepare the food. The appliances can be as simple as a knife or as complex as an oven or a microwave. When following an online recipe or a printed cookbook, these may or may not be provided in a separate section. Some of the common appliances that are used in recipes are:
+- Knife
+- Cutting board
+- Mixing bowl
+- Measuring cups and spoons
+- Skillet
+- Saucepan
+- Oven
+- Microwave
+
+An example of appliances from a `Vegan Chickpea Salad` recipe could be:
+```
+- Knife
+- Cutting board
+- Large bowl
+- Small bowl
+- Whisk
+```
 
 ### Time
 
 The time is the duration it takes to prepare the food. The time can be as little as a few minutes or as long as a few hours. There are different types of time when creating a recipe. These are outlined below
+
 | Time Type | Description |
 | ---------------- | ---------------------------------------------------------- |
 | Preparation Time | The time it takes to prepare the ingredients before cooking |
 | Cooking Time | The time it takes to cook the food |
 | Total Time | The total time it takes to prepare the food from start to finish |
+
+
+An example of time from a `Vegan Chickpea Salad` recipe could be:
+```
+- Preparation Time: 15 minutes
+- Total Time: 15 minutes
+```
+Note, as there is no cooking involved in this recipe, the cooking time is not mentioned.
