--- a/src/content/docs/guides/recipe.mdx
+++ b/src/content/docs/guides/recipe.mdx
@@ -53,6 +53,65 @@ An example of instructions from a `Vegan Chickpea Salad` recipe could be:
 5. Serve the salad immediately, or refrigerate for later.
 ```
 
+### Yield
+In cooking, "Yield" refers to the total quantity of food produced by a recipe. The yield is usually measured in units such as:
+ 
+``` 
+Grams (g)
+Milliliters (mL) or fluid ounces (fl oz)
+Pounds (lb) or kilograms (kg)
+Cups (cups)
+```
+
+**Yield**.
+
+An example of yield from a `Vegan Chickpea Salad` recipe could be:
+```
+- Yield: 200 grams
+```
+
+Other examples of yield could be:
+```
+1 1/2 cups
+230 ml
+100 cookies
+```
+
+### Servings
+The servings is the number of people that the recipe is intended to serve. The servings can be as little as one person or as many as a dozen or more.
+
+An example of servings from a `Vegan Chickpea Salad` recipe could be:
+```
+- Servings: 4
+```
+
+### Yields vs Servings
+The key differences between Yield and Servings:
+  
+- **Measurement units:** Yield is measured in weight (grams, pounds) or volume (cups), while Servings are counted as numbers.
+- **Quantity vs. Portion size:** Yield represents the total amount of food prepared, whereas Servings indicate how many individual portions can be made from that yield.
+- **Purpose:** Yield helps you understand how much food to prepare, while Servings informs you about the number of people the dish will serve.
+ 
+To illustrate this difference:
+ 
+- A recipe with a *Yield* of 500g and *Servings*: 8 means you'll end up with 500g of prepared food that can be divided into 8 portions.
+- Another recipe might have a *Yield* of 300mL (1.25 cups) and *Servings*: 4, indicating you'll prepare 300mL of liquid or semi-liquid food that serves 4 people.
+
+### Amount Per Serving (APS)
+The "Amount per Serving" (APS) is used to express the quantity of food or ingredients per portion. APS is usually measured in the same units as the yield (e.g., grams, cups, etc.) and indicates how much of the total yield each serving contains.
+ 
+For example:
+- A recipe with a yield of 250g and APS: 35g per serving means that each serving contains approximately 35g of the prepared food.
+- Another recipe might have a yield of 1 cup (240mL) and APS: 2/3 cup per serving, indicating that each portion is roughly 2/3 cup.
+
+**Non-numeric Servings:**
+ 
+When the recipe yields a non-numeric quantity, such as cookies or pieces of food, you can express the amount per serving as a ratio or proportion. For example:
+- A cookie recipe with a yield of "20-25 cookies" and APS: 1/4 to 1/3 cookie per serving means that each serving is equivalent to one-quarter to one-third of a cookie.
+- Another recipe might produce "12-15 pieces" and APS: 2-3 pieces per serving, indicating that each portion contains two to three pieces of the prepared food.
+  
+In these cases, recipe's instructions could be used to determine an approximate quantity per serving. For instance, if a recipe yields 20 cookies and serves 4 people, you could estimate that each person gets about 5 cookies (APS: 5 cookies per serving).
+
 ### Appliances
 
 The appliances are the tools that are needed to prepare the food. The appliances can be as simple as a knife or as complex as an oven or a microwave. When following an online recipe or a printed cookbook, these may or may not be provided in a separate section. Some of the common appliances that are used in recipes are:
