feat: Add information about nutrients and their properties and RDI

--- a/src/content/docs/guides/recommended-daily-intakes.mdx
+++ b/src/content/docs/guides/recommended-daily-intakes.mdx
@@ -4,13 +4,13 @@ title: Recommended Daily Intakes
 As we saw in the [Nutrients](/guides/nutrient) guide, nutrients are essential for the body to function properly. The amount of each nutrient that the body needs is called the **Recommended Daily Intake (RDI)** or **Recommended Daily Allowance (RDA)**.
 
 These values are set by health authorities and are based on the latest scientific research. The RDI values are different for different nutrients and are based on factors such as age, life-stage, and gender. 
-Differnt countries have different guidelines for RDIs. The following table is an example of various RDIs provided by different health authorities in some of the countries:
+Different countries have different guidelines for RDIs. The following table is an example of various RDIs provided by different health authorities in some of the countries:
 
 | Country | Organization | Recommended Daily Intake | Notes |
 |---------|--------------|------------------------------| ------|
 | United States | National Institutes of Health | [Link](https://ods.od.nih.gov/Health_Information/Dietary_Reference_Intakes.aspx) | The National Institutes of Health (NIH) is the primary agency for conducting and supporting medical research. |
 | United States | Food and Drug Administration | [Link](https://www.fda.gov/food/nutrition-facts-label/daily-value-nutrition-and-supplement-facts-labels) | The Food and Drug Administration (FDA) is a federal agency of the United States Department of Health and Human Services. This is used for Food Product and Supplement Labels |
-| Canada | Health Canada | [Link](https://www.canada.ca/en/health-canada/services/food-nutrition/healthy-eating/dietary-reference-intakes.html) | Health Canada is the department of the Government of Canada responsible for national public health. |
+    | Canada | Health Canada | [Link](https://www.canada.ca/en/health-canada/services/food-nutrition/healthy-eating/dietary-reference-intakes.html) | Health Canada is the department of the Government of Canada responsible for national public health. |
 | Australia | National Health and Medical Research Council | [Link](https://www.nrv.gov.au/nutrients) | The National Health and Medical Research Council (NHMRC) is Australia's leading expert body promoting the development and maintenance of public and individual health standards. |
 | United Kingdom | National Health Service | [Link](https://www.gov.uk/government/publications/the-eatwell-guide) | The National Health Service (NHS) is the publicly funded healthcare system in the United Kingdom. |
 | India | Indian Council of Medical Research | [Link](https://www.nin.res.in/ifct_book.html) | The Indian Council of Medical Research (ICMR) is the apex body in India for the formulation, coordination, and promotion of biomedical research. |
