feat: Add nutrition facts, allergens, dietary restrictions, and claims to recipe page

--- a/src/content/docs/guides/recipe.mdx
+++ b/src/content/docs/guides/recipe.mdx
@@ -112,6 +112,63 @@ When the recipe yields a non-numeric quantity, such as cookies or pieces of food
   
 In these cases, recipe's instructions could be used to determine an approximate quantity per serving. For instance, if a recipe yields 20 cookies and serves 4 people, you could estimate that each person gets about 5 cookies (APS: 5 cookies per serving).
 
+### Nutrition Facts
+Any recipe made for consumption contains a variety of nutrients. The nutrients are essential for the body to function properly. These  nutrients can be communicated in the form of a [Nutrition Facts](/guides/nutrition-fact).
+
+An example of nutrition facts from a `Vegan Chickpea Salad` recipe could be:
+```
+- Calories: 200
+- Total Fat: 10g
+- Saturated Fat: 1g
+- Cholesterol: 0mg
+- Sodium: 200mg
+- Total Carbohydrates: 20g
+- Dietary Fiber: 5g
+- Protein: 5g
+```
+
+### Allergens
+Depending on the ingredients used in the recipe, the recipe may contain [allergens](/guides/allergen). 
+
+An example of allergens from a `Vegan Chickpea Salad` recipe could be:
+```
+- Sesame seeds
+```
+
+### Dietary Restrictions
+Depending on the ingredients used in the recipe, the recipe may be suitable for people with specific [dietary preferences](/guides/diet)
+
+### Claims
+Depending on the ingredients used in the recipe, the recipe may be make a [claim](/guides/claim) about the food.
+
+An example of claims from a `Vegan Chickpea Salad` recipe could be:
+```
+- Vegan
+- Gluten-Free
+- Dairy-Free
+- High in Fiber
+- Low in Sodium
+```
+
+### Time
+
+The time is the duration it takes to prepare the food. The time can be as little as a few minutes or as long as a few hours. There are different types of time when creating a recipe. These are outlined below
+
+| Time Type | Description |
+| ---------------- | ---------------------------------------------------------- |
+| Preparation Time | The time it takes to prepare the ingredients before cooking |
+| Cooking Time | The time it takes to cook the food |
+| Total Time | The total time it takes to prepare the food from start to finish |
+
+
+An example of time from a `Vegan Chickpea Salad` recipe could be:
+```
+- Preparation Time: 15 minutes
+- Total Time: 15 minutes
+```
+Note, as there is no cooking involved in this recipe, the cooking time is not mentioned.
+
+
 ### Appliances
 
 The appliances are the tools that are needed to prepare the food. The appliances can be as simple as a knife or as complex as an oven or a microwave. When following an online recipe or a printed cookbook, these may or may not be provided in a separate section. Some of the common appliances that are used in recipes are:
@@ -132,21 +189,3 @@ An example of appliances from a `Vegan Chickpea Salad` recipe could be:
 - Small bowl
 - Whisk
 ```
-
-### Time
-
-The time is the duration it takes to prepare the food. The time can be as little as a few minutes or as long as a few hours. There are different types of time when creating a recipe. These are outlined below
-
-| Time Type | Description |
-| ---------------- | ---------------------------------------------------------- |
-| Preparation Time | The time it takes to prepare the ingredients before cooking |
-| Cooking Time | The time it takes to cook the food |
-| Total Time | The total time it takes to prepare the food from start to finish |
-
-
-An example of time from a `Vegan Chickpea Salad` recipe could be:
-```
-- Preparation Time: 15 minutes
-- Total Time: 15 minutes
-```
-Note, as there is no cooking involved in this recipe, the cooking time is not mentioned.
