feat: Update measurement units in recipe guide

--- a/src/content/docs/guides/recipe.mdx
+++ b/src/content/docs/guides/recipe.mdx
@@ -33,7 +33,7 @@ An example of ingredients from a `Vegan Chickpea Salad` recipe could be:
 Some of the key points to note about ingredients are:
 - The ingredient is typically written in one line with the following format: `<quantity> <unit> <food>`. For example, `1 cup chickpeas`.
 - The ingredient always starts with a quantity. The quantity is the amount of the ingredient that is used in the recipe. The quantity is typically a number, such as 1, 2, 1/2, 3 1/2 etc.
-- The quantity is followed by the unit of measurement. The unit of measurement is the unit in which the quantity is measured. Some of the common units of measurement are grams (g), milliliters (ml), cups, tablespoons, teaspoons, etc. The meausrement units used in 
+- The quantity is followed by the unit of measurement. The unit of measurement is the unit in which the quantity is measured. Some of the common units of measurement are grams (g), milliliters (ml), cups, tablespoons, teaspoons, etc. The measurement units used in 
 different parts of the world may vary. For example, in the US, the measurement unit for volume is typically cups, tablespoons, and teaspoons, while in the UK, the measurement unit for volume is typically milliliters (ml) and liters (l). For more details, read [Cookbook:Units of measurement](https://en.wikibooks.org/wiki/Cookbook:Units_of_measurement)
 - The unit of measurement is followed by the food. The food is the ingredient that is used in the recipe. The food can be a single ingredient, such as chickpeas, or a combination of ingredients, such as chickpeas and red onion. The food is typically a noun, such as chickpeas, red onion, cucumber, tomato, etc.
 
