feat: Update recipe guide with correct link to ingredient page

--- a/src/content/docs/guides/recipe.mdx
+++ b/src/content/docs/guides/recipe.mdx
@@ -14,7 +14,7 @@ No matter how simple or complex a recipe is, it always have a combination of som
 
 ### Ingredients
 
-A recipe may include as little as one [food](/guides/food) or as many as a dozen or more. The amount of each food, combined with quantity and measurement unit is known as as **Ingredient**.
+A recipe may include as little as one [food](/guides/food) or as many as a dozen or more. The amount of each food, combined with quantity and measurement unit is known as as [Ingredient](/guides/ingredient).
 When following an online recipe, or a printed cookbook, these can be located under the heading "Ingredients". Some of the ingredients may be optional, or may have alternatives.
 
 An example of ingredients from a `Vegan Chickpea Salad` recipe could be:
