change guides to concepts

--- a/src/content/docs/concepts/_concepts.mdx
+++ b/src/content/docs/concepts/_concepts.mdx
@@ -19,7 +19,7 @@ In the context of BetterMenu, an ingredient is a single food item that is used f
 | Thai Curry | Prepared Food  | Available as a packaged item or as a prepared meal |
 
 <Aside type="tip">
-All the packaged items or prepared meals consists of multiple ingredients, and a series of steps are followed to prepare them. See [Recipe](/guides/recipe) for more details.
+All the packaged items or prepared meals consists of multiple ingredients, and a series of steps are followed to prepare them. See [Recipe](/concepts/recipe) for more details.
 </Aside>
 
 ## Nutrition
@@ -28,8 +28,8 @@ In addition to satiating hunger, the primary goal of food is to provide nutritio
 
 ## Nutrient
 
-Every ingredient made for consumption contains a variety of nutrients. Nutrients are substances that provide nourishment essential for the maintenance of life and for growth. Nutrients can be divided into two categories: macronutrients and micronutrients. For more details, see [Nutrients](/guides/nutrients).
+Every ingredient made for consumption contains a variety of nutrients. Nutrients are substances that provide nourishment essential for the maintenance of life and for growth. Nutrients can be divided into two categories: macronutrients and micronutrients. For more details, see [Nutrients](/concepts/nutrients).
 
 ## Recipe
 
-A recipe is a set of instructions for preparing a particular food meant for consumption. See [Recipe](/guides/recipe) for more details.
+A recipe is a set of instructions for preparing a particular food meant for consumption. See [Recipe](/concepts/recipe) for more details.
