--- a/src/content/docs/concepts/claim.mdx
+++ b/src/content/docs/concepts/claim.mdx
@@ -1,7 +1,7 @@
 ---
 title: Claim
 ---
-A **Claim** refers to a statement that refers to a fact in relation to a [food product](/guides/food) or a [recipe](/guides/recipe). A claim can be derived based on multiple inputs such as
+A **Claim** refers to a statement that refers to a fact in relation to a [food product](/concepts/food) or a [recipe](/concepts/recipe). A claim can be derived based on multiple inputs such as
 - Ingredients
 - Nutrients
 - Allergens
