--- a/src/content/docs/concepts/dish.mdx
+++ b/src/content/docs/concepts/dish.mdx
@@ -2,7 +2,7 @@
 title: Dish
 ---
 
-A **Dish** is a food item similar to a [recipe](/guides/recipe) that is prepared by combining multiple ingredients. In addition to individual ingredients, a dish also includes other recipes as ingredients.
+A **Dish** is a food item similar to a [recipe](/concepts/recipe) that is prepared by combining multiple ingredients. In addition to individual ingredients, a dish also includes other recipes as ingredients.
 
 A dish possesses all the properties of a recipe, such as a title, description, ingredients, instructions, etc. The place where it differs from a recipe is where it takes other recipes as ingredients.
 
