--- a/src/content/docs/concepts/nutrient.mdx
+++ b/src/content/docs/concepts/nutrient.mdx
@@ -11,6 +11,6 @@ A Nutrient has a `name` and could further be classified into two categories:
 
 There are many nutrients that could not be classified as either macronutrients or micronutrients, however, they are still essential for the body to function properly. These nutrients include water, potassium, and Chloride.
 
-Depending on the life stage and gender, the daily recommended intake of nutrients may vary. Read [Recommended Daily Intakes](/guides/recommended-daily-intakes) for more information. When buying packaged food, you would see some of the nutrients listed on the packaging. These are typically referred to as [Nutrition Facts](/guides/nutrition-fact).
+Depending on the life stage and gender, the daily recommended intake of nutrients may vary. Read [Recommended Daily Intakes](/concepts/recommended-daily-intakes) for more information. When buying packaged food, you would see some of the nutrients listed on the packaging. These are typically referred to as [Nutrition Facts](/concepts/nutrition-fact).
 
 Also, when eating out, people are getting more aware of the nutrients in the food they consume. Therefore, it is not uncommon to see the nutrient information on the menu.
