--- a/src/content/docs/concepts/nutrition-fact.mdx
+++ b/src/content/docs/concepts/nutrition-fact.mdx
@@ -4,10 +4,10 @@ title: Nutrition Fact
 
 A Nutrition Fact is a piece of information about a nutrient available in the food. It provides some key information such as
 
-- **Name**: The name of the [nutrient](/guides/nutrient).
+- **Name**: The name of the [nutrient](/concepts/nutrient).
 - **Measurement Unit**: The unit in which the nutrient is measured. These are typically grams (g), milligrams (mg), micrograms (µg), or international units (IU).
 - **Amount**: The amount of the nutrient in the food. This is typically measured in the measurement unit.
-- **% Daily Value**: The percentage of the daily recommended intake of the nutrient. This is typically based on some standard guidelines such as the [Recommended Daily Intake (RDI)](/guides/recommended-daily-intakes). For example, in the United States, the Daily Value (DV) is based on a 2000-calorie diet. An important point to note that some of the nutrients _may not_ have a % Daily Value associated. In such cases, the % Daily Value is not empty when displayed.
+- **% Daily Value**: The percentage of the daily recommended intake of the nutrient. This is typically based on some standard guidelines such as the [Recommended Daily Intake (RDI)](/concepts/recommended-daily-intakes). For example, in the United States, the Daily Value (DV) is based on a 2000-calorie diet. An important point to note that some of the nutrients _may not_ have a % Daily Value associated. In such cases, the % Daily Value is not empty when displayed.
 
 The term **Nutrition Facts** refer to the list of _Nutrition Fact_.
 
@@ -19,8 +19,8 @@ In addition to the list of _Nutrition Fact_, the Nutrition Facts on packaged foo
 
 - **Serving Size**: The serving size is the amount of food that is typically consumed in one sitting. The serving size is typically measured in grams (g), milliliters (mL), or cups.
 - **Servings Per Container**: The number of servings in the container. This helps you understand how many servings are in the container.
-- **Allergen Information**: Information about the [allergens](/guides/allergen) present in the food. This is important for people with food allergies.
-- **Ingredients**: The list of ingredients used in the food. **Note:** The ingredients are typically listed in descending order of their weight in the food. Also, this list of ingredient differs from the [recipe](/guides/recipe) as it does not include the quantity of the ingredient.
+- **Allergen Information**: Information about the [allergens](/concepts/allergen) present in the food. This is important for people with food allergies.
+- **Ingredients**: The list of ingredients used in the food. **Note:** The ingredients are typically listed in descending order of their weight in the food. Also, this list of ingredient differs from the [recipe](/concepts/recipe) as it does not include the quantity of the ingredient.
 
 ### Nutrition Facts on Restaurant Menu
 At restaurants, where nutrition on Menu is available, it is limited to displaying the **Calories** information.
