--- a/src/content/docs/concepts/recipe.mdx
+++ b/src/content/docs/concepts/recipe.mdx
@@ -14,7 +14,7 @@ No matter how simple or complex a recipe is, it always have a combination of som
 
 ### Ingredients
 
-A recipe may include as little as one [food](/guides/food) or as many as a dozen or more. The amount of each food, combined with quantity and measurement unit is known as as [Ingredient](/guides/ingredient).
+A recipe may include as little as one [food](/concepts/food) or as many as a dozen or more. The amount of each food, combined with quantity and measurement unit is known as as [Ingredient](/concepts/ingredient).
 When following an online recipe, or a printed cookbook, these can be located under the heading "Ingredients". Some of the ingredients may be optional, or may have alternatives.
 
 An example of ingredients from a `Vegan Chickpea Salad` recipe could be:
@@ -113,7 +113,7 @@ When the recipe yields a non-numeric quantity, such as cookies or pieces of food
 In these cases, recipe's instructions could be used to determine an approximate quantity per serving. For instance, if a recipe yields 20 cookies and serves 4 people, you could estimate that each person gets about 5 cookies (APS: 5 cookies per serving).
 
 ### Nutrition Facts
-Any recipe made for consumption contains a variety of nutrients. The nutrients are essential for the body to function properly. These  nutrients can be communicated in the form of a [Nutrition Facts](/guides/nutrition-fact).
+Any recipe made for consumption contains a variety of nutrients. The nutrients are essential for the body to function properly. These  nutrients can be communicated in the form of a [Nutrition Facts](/concepts/nutrition-fact).
 
 An example of nutrition facts from a `Vegan Chickpea Salad` recipe could be:
 ```
@@ -128,7 +128,7 @@ An example of nutrition facts from a `Vegan Chickpea Salad` recipe could be:
 ```
 
 ### Allergens
-Depending on the ingredients used in the recipe, the recipe may contain [allergens](/guides/allergen). 
+Depending on the ingredients used in the recipe, the recipe may contain [allergens](/concepts/allergen). 
 
 An example of allergens from a `Vegan Chickpea Salad` recipe could be:
 ```
@@ -136,10 +136,10 @@ An example of allergens from a `Vegan Chickpea Salad` recipe could be:
 ```
 
 ### Dietary Restrictions
-Depending on the ingredients used in the recipe, the recipe may be suitable for people with specific [dietary preferences](/guides/diet)
+Depending on the ingredients used in the recipe, the recipe may be suitable for people with specific [dietary preferences](/concepts/diet)
 
 ### Claims
-Depending on the ingredients used in the recipe, the recipe may be make a [claim](/guides/claim) about the food.
+Depending on the ingredients used in the recipe, the recipe may be make a [claim](/concepts/claim) about the food.
 
 An example of claims from a `Vegan Chickpea Salad` recipe could be:
 ```
