--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -8,7 +8,7 @@ hero:
     file: ../../assets/bm-banner.svg
   actions:
     - text: Read Guide
-      link: /guides/concepts
+      link: /concepts/account
       icon: right-arrow
       variant: primary
     - text: Visit BetterMenu
