--- a/src/content/docs/concepts/account.mdx
+++ b/src/content/docs/concepts/account.mdx
@@ -2,7 +2,7 @@
 title: Account
 ---
 
-![User and Accounts](/src/assets/concepts/account.svg)
+![User and Accounts](../../../assets/concepts/account.svg)
 
 Everything in BetterMenu start with a notion of an **Account**. When a **User** signs up, they are assigned an account. An account in BetterMenu is of following types:
 
