add descriptions for SEO

--- a/src/content/docs/concepts/account.mdx
+++ b/src/content/docs/concepts/account.mdx
@@ -1,5 +1,6 @@
 ---
 title: Account
+description: Account is a fundamental concept in BetterMenu. It represents a user or a group of users.
 ---
 
 ![User and Accounts](/src/assets/concepts/account.svg)
