--- a/src/content/docs/concepts/allergen.mdx
+++ b/src/content/docs/concepts/allergen.mdx
@@ -1,5 +1,6 @@
 ---
 title: Allergen
+description: An allergen is a substance that can cause an allergic reaction in some people. Allergens are typically found in food and can cause a range of symptoms from mild to severe.
 ---
 An allergen is a substance that can cause an allergic reaction in some people. Allergens are typically found in food and can cause a range of symptoms from mild to severe. 
 
