--- a/src/content/docs/concepts/claim.mdx
+++ b/src/content/docs/concepts/claim.mdx
@@ -1,5 +1,6 @@
 ---
 title: Claim
+description: A Claim refers to a statement that refers to a fact in relation to a food product or a recipe. A claim can be derived based on multiple inputs such as ingredients, nutrients, allergens, and preparation method.
 ---
 A **Claim** refers to a statement that refers to a fact in relation to a [food product](/concepts/food) or a [recipe](/concepts/recipe). A claim can be derived based on multiple inputs such as
 - Ingredients
