--- a/src/content/docs/concepts/diet.mdx
+++ b/src/content/docs/concepts/diet.mdx
@@ -1,5 +1,6 @@
 ---
 title: Diet
+description: A diet is a set of eating habits that are based on specific guidelines. There are many different types of diets, such as vegetarian, vegan, paleo, keto, etc. Each diet has its own set of guidelines and restrictions.
 ---
 People around the world follow different types of diets based on their preferences, health goals, and ethical beliefs. A diet is a set of eating habits that are based on specific guidelines. There are many different types of diets, such as vegetarian, vegan, paleo, keto, etc. Each diet has its own set of guidelines and restrictions. Some diets focus on weight loss, while others focus on health and wellness. Some diets are based on ethical beliefs, such as veganism.
 
