--- a/src/content/docs/concepts/dish.mdx
+++ b/src/content/docs/concepts/dish.mdx
@@ -1,5 +1,6 @@
 ---
 title: Dish
+description: A Dish is a food item similar to a recipe that is prepared by combining multiple ingredients. In addition to individual ingredients, a dish also includes other recipes as ingredients.
 ---
 
 A **Dish** is a food item similar to a [recipe](/concepts/recipe) that is prepared by combining multiple ingredients. In addition to individual ingredients, a dish also includes other recipes as ingredients.
