--- a/src/content/docs/concepts/food.mdx
+++ b/src/content/docs/concepts/food.mdx
@@ -1,5 +1,6 @@
 ---
 title: Food
+description: Food is a primary need for humans. It is a source of nourishment, pleasure, connection, and expression. Food is made up of various components such as nutrients, allergens, and other substances. These foods may also belong to different diets. These components play a crucial role in determining the quality of the food and its impact on our body.
 ---
 
 As humans, food is a primary need for us. The definition of food is subjective and means different things to different people. For some, food is a source of nourishment, for others, it is a source of pleasure. For some, food is a way to connect with others, for others, it is a way to express themselves. Food is a complex subject and has many dimensions to it.
