--- a/src/content/docs/concepts/measurement-unit.mdx
+++ b/src/content/docs/concepts/measurement-unit.mdx
@@ -1,5 +1,6 @@
 ---
 title: Measurement Unit
+description: A Measurement Unit is a standard quantity used to express the amount of an ingredient or food item in a recipe. Measurement units are used to quantify the amount of an ingredient or food item in a recipe. The measurement unit is typically a standard unit of measurement such as grams (g), milliliters (mL), cups, tablespoons, teaspoons, etc.
 ---
 
 A **Measurement Unit** is a standard quantity used to express the amount of an ingredient or food item in a recipe. Measurement units are used to quantify the amount of an ingredient or food item in a recipe. The measurement unit is typically a standard unit of measurement such as grams (g), milliliters (mL), cups, tablespoons, teaspoons, etc.
