--- a/src/content/docs/concepts/nutrition-fact.mdx
+++ b/src/content/docs/concepts/nutrition-fact.mdx
@@ -1,5 +1,6 @@
 ---
 title: Nutrition Fact
+description: A Nutrition Fact is a piece of information about a nutrient available in the food. It provides some key information such as Name, Measurement Unit, Amount, and % Daily Value. The term Nutrition Facts refer to the list of Nutrition Fact.
 ---
 
 A Nutrition Fact is a piece of information about a nutrient available in the food. It provides some key information such as
