--- a/src/content/docs/concepts/recipe.mdx
+++ b/src/content/docs/concepts/recipe.mdx
@@ -1,5 +1,6 @@
 ---
 title: Recipe
+description: A Recipe is a combination of ingredients and instructions that are used to prepare a meal for consumption. A recipe can be as simple as a single ingredient or as complex as a dozen or more ingredients. A recipe can be as simple as a single step or as complex as a dozen or more steps. A recipe can be as simple as a single appliance or as complex as a dozen or more appliances. A recipe can be as quick as a few minutes or as long as a few hours.
 ---
 import { Aside } from '@astrojs/starlight/components';
 
