--- a/src/content/docs/concepts/recommended-daily-intakes.mdx
+++ b/src/content/docs/concepts/recommended-daily-intakes.mdx
@@ -1,5 +1,6 @@
 ---
 title: Recommended Daily Intakes
+description: Recommended Daily Intakes (RDI) or Recommended Daily Allowance (RDA) are the amount of each nutrient that the body needs to function properly. These values are set by health authorities and are based on the latest scientific research. The RDI values are different for different nutrients and are based on factors such as age
 ---
 As we saw in the [Nutrients](/concepts/nutrient) guide, nutrients are essential for the body to function properly. The amount of each nutrient that the body needs is called the **Recommended Daily Intake (RDI)** or **Recommended Daily Allowance (RDA)**.
 
