chore: Update alt text for BetterMenu logo and fix typo in food.mdx

--- a/src/content/docs/concepts/claim.mdx
+++ b/src/content/docs/concepts/claim.mdx
@@ -14,7 +14,7 @@ A Claim can belong to one of the following categories:
 - Food Source Claim (e.g. Organic, Non-GMO)
 - Lifestyle Claim (e.g. Vegan, Gluten-Free)
 
-### Nutrient Content Claim
+## Nutrient Content Claim
 A Nutrient Content Claim refers to a statement that refers to the presence or absence of a nutrient in a food product. Nutrient Content Claims are typically regulated and governed by an authority. These are also specific to each country. 
 
 The following table is an example of various Nutrient Content Claims provided by different health authorities in some of the countries:
@@ -26,7 +26,7 @@ The following table is an example of various Nutrient Content Claims provided by
 | Canada | Health Canada | [Link](https://inspection.canada.ca/en/food-labels/labelling/industry/nutrient-content) |  |
 | United Kingdom | Food Standards Agency | [Link](https://www.gov.uk/food-labelling-and-packaging/nutrition-health-claims-and-supplement-labelling) |  |
 
-### Health Claim
+## Health Claim
 A Health Claim refers to a statement that refers to the relationship between a food product or a nutrient and a health condition. Health Claims are typically regulated and governed by an authority. These are also specific to each country.
 
 The following table is an example of various Health Claims provided by different health authorities in some of the countries:
@@ -39,7 +39,7 @@ The following table is an example of various Health Claims provided by different
 | Canada | Health Canada | [Link](https://inspection.canada.ca/en/food-labels/labelling/industry/health-claims) |  |
 | United Kingdom | Food Standards Agency | [Link](https://www.gov.uk/government/publications/great-britain-nutrition-and-health-claims-nhc-register) |  |
 
-### Food Source Claim
+## Food Source Claim
 There are various certifications available for food products that are derived from a specific source. These certifications are typically governed by an authority. These are also specific to each country.
 
 The following table is an example of various Organic Food Source Claims provided by different health authorities in some of the countries:
