--- a/src/content/docs/concepts/measurement-unit.mdx
+++ b/src/content/docs/concepts/measurement-unit.mdx
@@ -20,9 +20,9 @@ When preparing a recipe, the two most common types of measurement units used are
 
 Depending on the system used, the measurement units may vary.
 
-### United States
+## United States
 
-#### Volume
+### Volume
 
 | Measurement Unit | Abbreviation | Equivalent | Notes           |
 | ---------------- | ------------ | ---------- | --------------- |
@@ -34,7 +34,7 @@ Depending on the system used, the measurement units may vary.
 | quart            | qt           | 960 mL     |
 | gallon           | gal          | 3.8 L      |
 
-#### Weight
+### Weight
 
 | Measurement Unit | Abbreviation | Equivalent | Notes |
 | ---------------- | ------------ | ---------- | ----- |
@@ -46,9 +46,9 @@ Depending on the system used, the measurement units may vary.
 - For cups, there is no standard conversion available. The conversion depends on the ingredient and its density. For example, 1 cup of water is approximately 240 mL, while 1 cup of flour is approximately 125 g. When using `cups`, it is recommended to use a `cooking scale` for accurate measurements.
 - For more details, refer to [USDA - Measure Equivalents](https://www.ars.usda.gov/northeast-area/beltsville-md-bhnrc/beltsville-human-nutrition-research-center/methods-and-application-of-food-composition-laboratory/mafcl-site-pages/measurement-conversion-tables/)
 
-### United Kingdom
+## United Kingdom
 
-#### Volume
+### Volume
 
 | Measurement Unit | Abbreviation | Equivalent | Notes |
 | ---------------- | ------------ | ---------- | ----- |
@@ -57,23 +57,23 @@ Depending on the system used, the measurement units may vary.
 | pint             | pt           | 568 mL     |
 | gallon           | gal          | 4.5 L      |
 
-#### Weight
+### Weight
 
 | Measurement Unit | Abbreviation | Equivalent | Notes |
 | ---------------- | ------------ | ---------- | ----- |
 | gram             | g            | 1 g        |
 | kilogram         | kg           | 1000 g     |
 
-### Metric System
+## Metric System
 
-#### Volume
+### Volume
 
 | Measurement Unit | Abbreviation | Equivalent | Notes |
 | ---------------- | ------------ | ---------- | ----- |
 | milliliter       | mL           | 1 mL       |
 | liter            | L            | 1000 mL    |
 
-#### Weight
+### Weight
 
 | Measurement Unit | Abbreviation | Equivalent | Notes |
 | ---------------- | ------------ | ---------- | ----- |
