--- a/src/content/docs/concepts/nutrition-fact.mdx
+++ b/src/content/docs/concepts/nutrition-fact.mdx
@@ -14,7 +14,7 @@ The term **Nutrition Facts** refer to the list of _Nutrition Fact_.
 
 Depending upon where they are available, there could be some more information available on Nutrition Facts
 
-### Nutrition Facts on Packaged food
+## Nutrition Facts on Packaged food
 
 In addition to the list of _Nutrition Fact_, the Nutrition Facts on packaged food typically include the following information:
 
@@ -23,7 +23,7 @@ In addition to the list of _Nutrition Fact_, the Nutrition Facts on packaged foo
 - **Allergen Information**: Information about the [allergens](/concepts/allergen) present in the food. This is important for people with food allergies.
 - **Ingredients**: The list of ingredients used in the food. **Note:** The ingredients are typically listed in descending order of their weight in the food. Also, this list of ingredient differs from the [recipe](/concepts/recipe) as it does not include the quantity of the ingredient.
 
-### Nutrition Facts on Restaurant Menu
+## Nutrition Facts on Restaurant Menu
 At restaurants, where nutrition on Menu is available, it is limited to displaying the **Calories** information.
 It is uncommon to see the detailed Nutrition Facts on the menu. However, this is changing due to many factors such as
 
